add header and footer in html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
-    abg tuaa
+    <header>
+      <div class="container">
+        <div class="header-left">
+          <img src="" alt="">
+        </div>
+        <a href=""></a>
+        <div class="header-right">
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </div>
+      </div>
+  </header>
+  <footer>
+    <div class="container">
+      <div class="footer-left">
+
+      </div>
+      
+    </div>
+  </footer>
   </body>
 </html>
