update header and footer used html and css

--- a/index.html
+++ b/index.html
@@ -9,26 +9,20 @@
     <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
+    <!-- Bagian header -->
     <header>
-      <div class="container">
-        <div class="header-left">
-          <img src="" alt="">
-        </div>
-        <a href=""></a>
-        <div class="header-right">
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-        </div>
-      </div>
-  </header>
-  <footer>
-    <div class="container">
-      <div class="footer-left">
+      <a href="index.html" class="name-company">tour & travel</a>
+      <nav class="nav-bar">
+        <ul class="nav-bar-items">
+          <li><a href="#home">beranda</a></li>
+          <li><a href="#about">tentang kami</a></li>
+          <li><a href="#wisata">paket wisata</a></li>
+          <li><a href="#contact">kontak kami</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      </div>
-      
-    </div>
-  </footer>
+    <!-- Bagian footer -->
+    <footer>Copyright &copy; 2022 Travel & Tour. All rights Reserved</footer>
   </body>
 </html>
