adding body popular tour lists html

--- a/index.html
+++ b/index.html
@@ -1,28 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Tour & Travel</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
-  </head>
-  <body>
-    <!-- Bagian header -->
-    <header>
-      <a href="index.html" class="name-company">tour & travel</a>
-      <nav class="nav-bar">
-        <ul class="nav-bar-items">
-          <li><a href="#home">beranda</a></li>
-          <li><a href="#about">tentang kami</a></li>
-          <li><a href="#wisata">paket wisata</a></li>
-          <li><a href="#contact">kontak kami</a></li>
-        </ul>
-      </nav>
-    </header>
+</head>
+<body>
 
-    <!-- Bagian footer -->
-    <footer>Copyright &copy; 2022 Travel & Tour. All rights Reserved</footer>
-  </body>
+    <!-- body bagian list paket wisata populer -->
+    <div class="popular-tour-wrapper">
+        <div class="container">
+            <div class="heading">
+                <h2>Paket Wisata Populer</h2>
+                <p>Paket wisata populer dalam waktu dekat.</p>
+            </div>
+
+            <div class="places">
+                <div class="place">
+                    <div class="place-icon">
+                        <img class="pic-places" src="https://cutt.ly/vA2CJ0o" alt="popular-places">
+                        <p>Bali</p>
+                        <h3>Nusa Penida</h3>
+
+                        <div class="btn-wrapper">
+                            <button href="#details">View Details</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="place">
+                    <div class="place-icon">
+                        <img class="pic-places" src="https://cutt.ly/hA2ZbAy" alt="popular-places">
+                        <p>Yogyakarta</p>
+                        <h3>Gumuk Pasir</h3>
+
+                        <div class="btn-wrapper">
+                            <button href="#details">View Details</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="place">
+                    <div class="place-icon">
+                        <img class="pic-places" src="https://cutt.ly/FA2Xsmg" alt="popular-places">
+                        <p>Lombok</p>
+                        <h3>Rinjani</h3>
+
+                        <div class="btn-wrapper">
+                            <button href="#details">View Details</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="place">
+                    <div class="place-icon">
+                        <img class="pic-places" src="https://cutt.ly/JA2XOct" alt="popular-places">
+                        <p>Probolinggo</p>
+                        <h3>Bromo</h3>
+
+                        <div class="btn-wrapper">
+                            <button href="#details">View Details</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
 </html>
