--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tour & Travel</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="stylesheet.css" />
     <link rel="stylesheet" href="responsive.css" />
-  </head>
-  <body>
-    abg tuaa
-  </body>
+</head>
+<body>
+
+    <div class="main">
+        <div class="container">
+            <div class="copy-container">
+                <h1>Find Your Best Holiday</h1>
+                <p>Find great adventure holidays and activities around the planet. </p>
+            </div>
+            <form>
+                <input class="search" type="text" placeholder="Cari..." required>	
+                <input class="button" type="button" value="Cari">		
+              </form>
+        </div>
+    </div>
+
+</body>
 </html>
