--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
     </header>
     <!-- End: Header -->
 
+    <!-- Main -->
+    <div class="main">
+      <div class="container">
+        <div class="copy-container">
+          <h1>Find Your Best Holiday</h1>
+          <p>Find great adventure holidays and activities around the planet.</p>
+        </div>
+        <form>
+          <input class="search" type="text" placeholder="Cari..." required />
+          <input class="button" type="button" value="Cari" />
+        </form>
+      </div>
+    </div>
+    <!-- End: Main -->
+
     <!-- body bagian list paket wisata populer -->
     <div class="popular-tour-wrapper">
       <div class="container">
