--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p>Paket wisata populer dalam waktu dekat.</p>
         </div>
 
-        <div class="places">
+        <div class="places animasi">
           <div class="place">
             <div class="place-icon">
               <img src="https://cutt.ly/vA2CJ0o" />
@@ -113,7 +113,7 @@
 
     <!-- Bagian Footer -->
     <footer>
-      <div class="container">
+      <div class="container animasi">
         Copyright &copy; 2022 Travel & Tour. All rights Reserved
       </div>
     </footer>
